# handelsregister

./: .gitignore  README.md  handelsregister.py  pyproject.toml  pytest.ini  pyutil.py  test_pyutil.py
hr/: __init__.py  handelsregister.py  pysel.py  pysil.py  pyutil.py
tests/: test_handelsregister.py  test_pyutil.py
