[tool.poetry]
name = "handelsregister"
version = "0.3.1"
description = "Adapted fork of the BundesAPI Handelsregister repo."
authors = ["BundesAPI <kontakt@bund.dev>", "Daniel Rösch <daniel.roesch91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mechanize = "^0.4.10"
selenium = "^4.22.0"
mechanicalsoup = "^1.3.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
min_version = "4.0"
isolated_build = true
env_list = ["py313"]

[testenv]
# Enabling Tox to install the dependencies via poetry.
deps = 
    poetry
commands =
    poetry install -v
    poetry run pytest tests/
