[tool.poetry]
name = "handelsregister"
version = "0.6.1"
description = "Adapted fork of the BundesAPI Handelsregister repo with additional methods for usage in mailVerify."
authors = ["BundesAPI <kontakt@bund.dev>", "Daniel Rösch <daniel.roesch91@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
mechanize = "^0.4.10"
selenium = "^4.22.0"
webdriver_manager = "^4.0.2"
mechanicalsoup = "^1.3.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pymupdf = "^1.26.1"
typing-extensions = "^4.14.1"
nameparser = "^1.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest-mock = "^3.14.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py310,py312
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
deps = pytest
usedevelop = true
commands =
    pytest
"""
env_list = ["py312", "py310"]
min_version = "4.0"
isolated_build = true
